<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etQ1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/enter_string"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/default_encode"
        android:textSize="@dimen/et"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnQ1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:onClick="encodeString"
        android:text="@string/encode_string"
        android:textSize="@dimen/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etQ1" />

    <TextView
        android:id="@+id/tvQ1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:textSize="@dimen/tv"
        app:layout_constraintBottom_toBottomOf="@id/btnQ1"
        app:layout_constraintEnd_toStartOf="@id/btnQ1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnQ1" />

    <EditText
        android:id="@+id/etQ2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/enter_string"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/default_frequency"
        android:textSize="@dimen/et"
        app:layout_constraintTop_toBottomOf="@id/tvQ1"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnQ2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin"
        android:onClick="getFrequency"
        android:text="@string/get_frequency"
        android:textSize="@dimen/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etQ2" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnQ2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnQ2">

        <TextView
            android:id="@+id/tvQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:textSize="@dimen/tv" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>